<resources>
    <string name="app_name">河橙相约</string>

    <string name="forgrtpwd">重置密码</string>
    <string name="details">活动详情</string>
    <string name="launch">发布活动</string>
    <string name="my_information">个人信息</string>
    <string name="update_my_information">修改个人信息</string>
    <string name="my_publish_activity">我发布的活动</string>
    <string name="my_apply_activity">我参加的活动</string>
    <string name="my_page">我的</string>
    <string name="register">注册</string>
    <string name="apply_join">申请参加</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 主页 -->
    <string name="menu_msg">首页</string>
    <string name="menu_contact">添加</string>
    <!--<string name="menu_find">发现</string>-->
    <string name="menu_me">我</string>
    <string name="user_id">学号</string>
    <string name="user_password">密码</string>
    <string name="user_name">姓名</string>
    <string name="user_sex">性别</string>
    <string name="user_college">学院</string>
    <string name="user_classname">班级</string>
    <string name="user_qq">qq</string>
    <string name="user_phone">手机</string>
    <string name="user_email">email</string>
</resources>
