<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="511dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/update_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="修改个人信息"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/user_id_mess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_id" />

            <TextView
                android:id="@+id/user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="user_id" />

            <TextView
                android:id="@+id/user_name_mess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name" />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="12sp"
                android:text="user_name" />

            <TextView
                android:id="@+id/user_sex_mess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="18sp"
                android:text="@string/user_sex" />

            <EditText
                android:id="@+id/user_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="12sp"
                android:text="user_sex" />

            <TextView
                android:id="@+id/user_college_mess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="18sp"
                android:text="@string/user_college" />

            <EditText
                android:id="@+id/user_college"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="12sp"
                android:text="user_college" />

            <TextView
                android:id="@+id/user_classname_mess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_classname" />

            <EditText
                android:id="@+id/user_classname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="user_classname" />

            <TextView
                android:id="@+id/user_qq_mess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_qq" />

            <EditText
                android:id="@+id/user_qq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="user_qq" />

            <TextView
                android:id="@+id/user_phone_mess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_phone" />

            <EditText
                android:id="@+id/user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="user_phone" />

            <TextView
                android:id="@+id/user_email_mess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_email" />

            <EditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="user_email" />

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <Button
                android:id="@+id/btn_update_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/button_style"
                android:text="修改"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>
