<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <!--<TextView-->
        <!--android:id="@+id/user"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="查看个人信息"-->
        <!--android:textColor="@color/gray_text"-->
        <!--android:textSize="18sp"-->
        <!--app:fontFamily="cursive" />-->

        <View android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="0.2dp"
            android:background="#cdcdcd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_id_mess"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_id"
                android:drawableLeft="@drawable/user_id"
                android:drawablePadding="10dip"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="user_id"
                android:textSize="18sp" />
        </LinearLayout>

        <View android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="0.2dp"
            android:background="#cdcdcd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_name_mess"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/user_name"
                android:drawablePadding="10dip"
                android:text="@string/user_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="12sp"
                android:text="user_name"
                android:textSize="18sp" />
        </LinearLayout>

        <View android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="0.2dp"
            android:background="#cdcdcd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_sex_mess"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/user_sex"
                android:drawablePadding="10dip"
                android:text="@string/user_sex"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/user_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="12sp"
                android:text="user_sex"
                android:textSize="18sp" />
        </LinearLayout>

        <View android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="0.2dp"
            android:background="#cdcdcd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_college_mess"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lineSpacingExtra="18sp"
                android:drawableLeft="@drawable/user_college"
                android:drawablePadding="10dip"
                android:text="@string/user_college"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/user_college"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="12sp"
                android:text="user_college"
                android:textSize="18sp" />

        </LinearLayout>

        <View android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="0.2dp"
            android:background="#cdcdcd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_classname_mess"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lineSpacingExtra="18sp"
                android:drawableLeft="@drawable/user_classname"
                android:drawablePadding="10dip"
                android:text="@string/user_classname"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/user_classname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="user_classname"
                android:textSize="18sp" />

        </LinearLayout>

        <View android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="0.2dp"
            android:background="#cdcdcd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_qq_mess"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/user_qq"
                android:drawablePadding="10dip"
                android:text="@string/user_qq"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/user_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="user_qq"
                android:textSize="18sp" />

        </LinearLayout>

        <View android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="0.2dp"
            android:background="#cdcdcd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_phone_mess"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/user_phone"
                android:drawablePadding="10dip"
                android:text="@string/user_phone"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/user_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="user_phone"
                android:textSize="18sp" />

        </LinearLayout>

        <View android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="0.2dp"
            android:background="#cdcdcd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_email_mess"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/user_email"
                android:drawablePadding="10dip"
                android:text="@string/user_email"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="user_email"
                android:textSize="18sp" />

        </LinearLayout>

        <View android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="0.2dp"
            android:background="#cdcdcd" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="60dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_update_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="@drawable/my_style"
                android:drawableLeft="@drawable/update"
                android:scaleType="center"
                android:paddingTop="10dp"
                style="?android:attr/borderlessButtonStyle"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
